--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -13,6 +13,7 @@ html {
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth !important;
 }
 
 body {
@@ -21,7 +22,6 @@ body {
   line-height: 1.4;
   font-size: 14px;
   font-family: 'Quicksand', sans-serif;
-  overscroll-behavior: none;
 }
 
 code,
