--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,34 +6,99 @@
 @mixin sectionTitle {
   text-align: center;
   @include textSize(14px, 600);
+
+  @media (min-width: 640px) {
+    @include textSize(17px, 600);
+  }
+
+  @media (min-width: 768px) {
+    @include textSize(20px, 600);
+  }
+
+  // @media (min-width: 1024px) and (max-width: 1280px) {
+  //   @include textSize(14px, 600);
+  // }
+  
+  // @media (min-width: 1280px) and (max-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
+
+  // @media (min-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
 }
 
 @mixin sectionSubtitle {
   text-align: center;
   font-family: "Nunito", sans-serif;
   @include textSize(24px, bold);
+
+  @media (min-width: 640px) {
+    @include textSize(33px, 800);
+  }
+
+  @media (min-width: 768px) {
+    @include textSize(36px, 800);
+  }
+
+  // @media (min-width: 1024px) and (max-width: 1280px) {
+  //   @include textSize(14px, 600);
+  // }
+  
+  // @media (min-width: 1280px) and (max-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
+
+  // @media (min-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
 }
 
 @mixin sectionDescription {
   @include textSize(14px, normal);
-  line-height: 22px;
+  line-height: 20px;
+  width: 350px;
+  text-align: center;
+
+  @media (min-width: 640px) {
+    @include textSize(16px, normal);
+    width: 480px;
+  }
+
+  @media(min-width: 768px) {
+    @include textSize(18px, normal);
+    width: 530px;
+    line-height: 23px;
+  }
+
+  // @media (min-width: 1024px) and (max-width: 1280px) {
+  //   @include textSize(14px, 600);
+  // }
+  
+  // @media (min-width: 1280px) and (max-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
+
+  // @media (min-width: 1536px) {
+  //   @include textSize(14px, 600);
+  // }
 }
 
 @mixin responsive($size) {
   @if ($size == sm) {
-    @media (min-width: 640px) and (max-width: 768px) {
+    @media (min-width: 640px) {
       @content;
     }
   } @else if ($size == md) {
-    @media (min-width: 768px) and (max-width: 1024px) {
+    @media (min-width: 768px) {
       @content;
     }
   } @else if ($size == lg) {
-    @media (min-width: 1024px) and (max-width: 1280px) {
+    @media (min-width: 1024px) {
       @content;
     }
   } @else if ($size == xl) {
-    @media (min-width: 1280px) and (max-width: 1536px) {
+    @media (min-width: 1280px) {
       @content;
     }
   } @else if ($size == 2xl) {
